--- a/web/src/app/square/square.component.css
+++ b/web/src/app/square/square.component.css
@@ -1,8 +1,8 @@
 div {
 	width: 20px;
 	height: 20px;
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 }
 
 :host {
